Wed Sep 21 18:45:03 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/utils/unite/Unite_Aspect_File.h:
        * cuts/utils/unite/Unite_Validation_File.cpp:

	  Fixed build errors related to not enabling inlining.

Wed Sep 21 13:15:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS.mwc:

          Combined the multiple workspaces into one single workspace.

        * cuts/utils/Property_Evaluator_T.inl:

          Fixed compile error where there were multiple symbols defined
          if inlining was not enabled.

        * CUTS_Modeling.mwc:
        * CUTS_Runtime_Arch.mwc:

          Removed these files.

Tue Sep 20 13:45:06 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS_Modeling.mwc:
        * CUTS_Runtime_Arch.mwc:
        * MPC/config/ccf_root.mpb:

          We no longer need to set CCF_ROOT to build CUTS. This is now
          handled by base projects.

Mon Sep 12 18:22:08 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts:
        * etc/scripts/build_sources.py:
        * etc/scripts/mpc.py:
        * etc/scripts/setup.py:

          Removed these files.

Mon Sep 12 18:15:12 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/generate_autobuild_properties.py:

          Removed this file.

Sun Sep 11 03:38:09 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/build_sources.py:

          Fixed error that was preventing CUTS from building.

        * etc/scripts/setup.py:

          Rename of the script below.

          Enhanced script so it is possible to select what setup actions
          should be performed.

        * etc/scripts/download_sources.py:

          Removed this file.

Sat Sep 10 13:56:15 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/ccm/CCM_Container_T.h:
        * cuts/arch/ccm/CCM_Container_T.inl: